Fix issues in models and update documentation

--- a/problem-sets/PS1/src/1.md
+++ b/problem-sets/PS1/src/1.md
@@ -9,8 +9,11 @@ print(a.ndim)#ndim输出维度，shape输出元祖
     inputvector=np.loadtxt()#从文本中提取数组,参数,文件名,dtype,delimiter分隔符,skiprows跳过的行数,usecols指定列的序号
     #a=np.expand_dims(,axis=)#axis0,1,-1...指定shape元祖加维度的位置,-1为最后
 '''
+.T 是属性而不是方法，因此不需要加括号。
 
-
-
-
-    
+numpy.linalg.norm 是计算范数的通用工具，支持向量和矩阵的多种范数。
+	•	默认计算向量的 2-范数，矩阵的 Frobenius 范数。
+	•	通过调整 ord(1,2) 和 axis(0,1)列，行 参数可以计算不同类型或方向的范数。
+np.reshape(x,(-1,1))重塑x为（a,b）向量，-1为自动推断
+A*B为矩阵逐元素乘法
+np.mean(log_regression.predict(x_train)==y.train)返回accurancy(0-1)
